--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.97"
 crossterm = "0.29.0"
 rand = "0.9.0"
+rand_core = "0.6.4"
 ratatui = "0.29.0"
+russh = "0.51.1"
+tokio = "1.44.2"
 wana_kana = "4.0.0"
