--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.97"
-crossterm = "0.29.0"
 rand = "0.9.0"
 rand_core = "0.6.4"
 ratatui = "0.29.0"
-russh = "0.51.1"
-tokio = "1.44.2"
 wana_kana = "4.0.0"
+tachyonfx = "0.13.0"
+tui-rain = "1.0.1"
+tokio = { version = "1.44.2", features = ["full"] }
+futures = "0.3.31"
+
+[dev-dependencies]
+crossterm = "0.29.0"
