--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tachyonfx = "0.13.0"
 tui-rain = "1.0.1"
 tokio = { version = "1.44.2", features = ["full"] }
 futures = "0.3.31"
+tui-big-text = "0.7.1"
 
 [dev-dependencies]
 crossterm = "0.29.0"
