--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.3.31"
 tui-big-text = "0.7.1"
 ratatui-image = "5.0.0"
 image = "0.25.6"
+rand_pcg = "0.9.0"
 
 [dev-dependencies]
 crossterm = "0.29.0"
