--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,2 +1,52 @@
-- name: Setup Rust Toolchain for GitHub CI
-  uses: actions-rust-lang/setup-rust-toolchain@v1.11.0
+name: Cargo Build & Test
+
+on:
+  push:
+  pull_request:
+
+permissions:
+  contents: write  # Required to create releases
+
+env: 
+  CARGO_TERM_COLOR: always
+
+jobs:
+  build_and_test:
+    name: Rust project - latest
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo build --verbose --release
+      - run: cargo test --verbose
+
+      - name: Upload release artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: simple-assembler 
+          path: target/release/simple-assembler
+
+  release:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download release artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: simple-assembler 
+          path: .
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            ./simple-assembler
