--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "kanash"
 version = "0.1.0"
+authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
 edition = "2021"
+description = "Learn Hiragana and Katakana in a terminal !"
+repository = "https://github.com/benoitlx/kanash"
+license = "MIT"
+keywords = ["ratatui", "learning", "japanesea", "TUI"]
 
 [dependencies]
 anyhow = "1.0.97"
@@ -14,8 +19,8 @@ tui-rain = "1.0.1"
 tokio = { version = "1.44.2", features = ["full"] }
 futures = "0.3.31"
 tui-big-text = "0.7.1"
-ratatui-image = "5.0.0"
-image = "0.25.6"
+#ratatui-image = "5.0.0"
+#image = "0.25.6"
 rand_pcg = "0.9.0"
 
 [dev-dependencies]
