fix(ci): workflows build-docker and publish-crates triggered twice

--- a/.github/workflows/publish-crates.yaml
+++ b/.github/workflows/publish-crates.yaml
@@ -3,7 +3,7 @@ name: Publish to crates.io
 
 on:
   release:
-    types: [published, released]
+    types: [published]
 
 jobs:
   push_to_crates_dot_io:
