--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -2,7 +2,7 @@ name: Build and push docker image to Docker Hub
 
 on:
   release:
-    types: [published, released]
+    types: [published]
 
 jobs:
   push_to_registry:
