fix: typo in crates keyword

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "Learn Hiragana and Katakana in a terminal !"
 repository = "https://github.com/benoitlx/kanash"
 license = "MIT"
-keywords = ["ratatui", "learning", "japanesea", "TUI"]
+keywords = ["ratatui", "learning", "japanese", "TUI"]
 
 [dependencies]
 anyhow = "1.0.97"
