--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ tui-big-text = "0.7.1"
 #ratatui-image = "5.0.0"
 #image = "0.25.6"
 rand_pcg = "0.9.0"
+ansi-to-tui = "7.0.0"
+rascii_art = "0.4.5"
 
 [dev-dependencies]
 crossterm = "0.29.0"
