--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tui-big-text = "0.7.1"
 rand_pcg = "0.9.0"
 ansi-to-tui = "7.0.0"
 rascii_art = "0.4.5"
+clap = { version = "4.5.37", features = ["derive"] }
 
 [dev-dependencies]
 crossterm = "0.29.0"
