--- a/kanash-components/Cargo.toml
+++ b/kanash-components/Cargo.toml
@@ -12,11 +12,10 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 anyhow = "1.0.97"
 rand = "0.9.0"
 rand_core = "0.6.4"
-ratatui = "0.29.0"
 wana_kana = "4.0.0"
 tachyonfx = "0.13.0"
 tui-rain = "1.0.1"
-tokio = { version = "1.44.2", features = ["full"] }
+tokio = { version = "1.44.2" }#, features = ["full"] }
 futures = "0.3.31"
 tui-big-text = "0.7.1"
 #ratatui-image = "5.0.0"
@@ -26,5 +25,17 @@ ansi-to-tui = "7.0.0"
 rascii_art = "0.4.5"
 clap = { version = "4.5.37", features = ["derive"] }
 
-[dev-dependencies]
-crossterm = "0.29.0"
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.3", features = ["wasm_js"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+ratatui = "0.29.0"
+
+# [target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
+# version = "1"
+# default-features = false
+# features = ["rt"]
+
+
+# [dev-dependencies]
+# crossterm = "0.29.0"
