wip: input event
The actual implementation needs two apps. One hand
ling input event, the other one in charge of rendering.
I still need to synchronize the app state (in particular the page)
I also need to find a seed that does not require std::time so it
does not cause runtime exception when targetting wasm

--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -11,4 +11,5 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
 ratzilla = "0.2.0"
+web-sys = "0.3.82"
 web-time = "1.1.0"
