--- a/kanash-components/Cargo.toml
+++ b/kanash-components/Cargo.toml
@@ -19,6 +19,9 @@ rand_pcg = "0.9.0"
 rascii_art = "0.4.5"
 clap = { version = "4.5.37", features = ["derive"] }
 
+[dev-dependencies]
+web-sys = "0.3.82"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
 ratzilla = "0.2.0"
