--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -11,5 +11,7 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
 ratzilla = "0.2.0"
-web-sys = "0.3.82"
 web-time = "1.1.0"
+
+[dev-dependencies]
+web-sys = "0.3.82"
