--- a/kanash-components/Cargo.toml
+++ b/kanash-components/Cargo.toml
@@ -25,6 +25,7 @@ web-sys = "0.3.82"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
 ratzilla = "0.2.0"
+web-time = "1.1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 ratatui = "0.29.0"
