--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - run: cargo test --verbose
+      - run: cargo build -p kanash
+      - run: cargo build --target wasm32-unknown-unknown -p kanash-ratzilla
+      - run: cargo test --verbose --exclude kanash-ratzilla
       - run: cargo fmt --check
