--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -11,6 +11,9 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
 ratzilla = "0.2.0"
+tachyonfx = { version = "0.20.1", default-features = false, features = ["wasm"] }
+tui-big-text = "0.7.3"
+wasm-bindgen = "0.2.105"
 web-time = "1.1.0"
 
 [dev-dependencies]
