--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -3,16 +3,17 @@ name = "kanash-ratzilla"
 version = "0.1.0"
 authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
 edition = "2021"
-description = "Learn Hiragana and Katakana in a terminal !"
+description = "Learn Hiragana and Katakana in a browser with terminal aesthetic!"
 repository = "https://github.com/benoitlx/kanash"
 license = "MIT"
 keywords = ["ratatui", "learning", "japanese", "TUI"]
+publish = false
 
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
 # ratzilla = "0.2.0"
-# ratzilla = { path = "../../ratzilla/" }
-ratzilla = { git = "https://github.com/benoitlx/ratzilla.git" }
+ratzilla = { path = "../../ratzilla/" }
+# ratzilla = { git = "https://github.com/benoitlx/ratzilla.git" }
 tachyonfx = { version = "0.20.1", default-features = false, features = ["wasm"] }
 tui-big-text = "0.7.3"
 wasm-bindgen = "0.2.105"
