--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -7,6 +7,7 @@ description = "Learn Hiragana and Katakana in a terminal !"
 repository = "https://github.com/benoitlx/kanash"
 license = "MIT"
 keywords = ["ratatui", "learning", "japanese", "TUI"]
+publish = false
 
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
