--- a/kanash/Cargo.toml
+++ b/kanash/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 keywords = ["ratatui", "learning", "japanese", "TUI"]
 
 [dependencies]
-kanash-components = { path = "../kanash-components/" }
+kanash-components = { path = "../kanash-components/", version = "0.1.4" }
 anyhow = "1.0.97"
 rand = "0.9.0"
 rand_core = "0.9.3"
