--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -12,8 +12,8 @@ publish = false
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
 # ratzilla = "0.2.0"
-ratzilla = { path = "../../ratzilla/" }
-# ratzilla = { git = "https://github.com/benoitlx/ratzilla.git" }
+# ratzilla = { path = "../../ratzilla/" }
+ratzilla = { git = "https://github.com/benoitlx/ratzilla.git" }
 tachyonfx = { version = "0.20.1", default-features = false, features = ["wasm"] }
 tui-big-text = "0.7.3"
 wasm-bindgen = "0.2.105"
