--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -12,7 +12,8 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 kanash-components = { path = "../kanash-components/" }
 # ratzilla = "0.2.0"
 # ratzilla = { path = "../../ratzilla/" }
-ratzilla = { git = "https://github.com/benoitlx/ratzilla.git", branch = "waiting-for-upstream" }
+# ratzilla = { git = "https://github.com/benoitlx/ratzilla.git", branch = "waiting-for-upstream" }
+ratzilla = { git = "https://github.com/orhun/ratzilla.git" }
 tachyonfx = { version = "0.21.0", default-features = false, features = ["wasm"] }
 tui-big-text = "0.7.3"
 wasm-bindgen = "0.2.105"
