--- a/kanash-components/Cargo.toml
+++ b/kanash-components/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 rand = "0.9.0"
 wana_kana = "4.0.0"
 rand_core = "0.9.3"
-tui-rain = "1.0.1"
+tui-rain = { git = "https://github.com/SuperJappie08/tui-rain.git", branch = "ratatui-0.30.0" }
 rand_pcg = "0.9.0"
 rascii_art = "0.4.5"
 
@@ -25,5 +25,5 @@ ratzilla = { git = "https://github.com/orhun/ratzilla.git" }
 web-time = "1.1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-ratatui = "0.29.0"
-ansi-to-tui = "7.0.0"
+ratatui = "0.30.0"
+ansi-to-tui = "8.0.1"
