build(deps): bump ratzilla from 0.2.0 to 0.3.0

--- a/kanash-components/Cargo.toml
+++ b/kanash-components/Cargo.toml
@@ -18,10 +18,7 @@ rascii_art = "0.4.5"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
-# ratzilla = "0.2.0"
-# ratzilla = { path = "../../ratzilla/" }
-# ratzilla = { git = "https://github.com/benoitlx/ratzilla.git", branch = "waiting-for-upstream" }
-ratzilla = { git = "https://github.com/orhun/ratzilla.git" }
+ratzilla = "0.3.0"
 web-time = "1.1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
