--- a/kanash-ratzilla/Cargo.toml
+++ b/kanash-ratzilla/Cargo.toml
@@ -10,10 +10,7 @@ keywords = ["ratatui", "learning", "japanese", "TUI"]
 
 [dependencies]
 kanash-components = { path = "../kanash-components/" }
-# ratzilla = "0.2.0"
-# ratzilla = { path = "../../ratzilla/" }
-# ratzilla = { git = "https://github.com/benoitlx/ratzilla.git", branch = "waiting-for-upstream" }
-ratzilla = { git = "https://github.com/orhun/ratzilla.git" }
+ratzilla = "0.3.0"
 tachyonfx = { version = "0.22.0", default-features = false, features = ["wasm"] }
 tui-big-text = "0.8.1"
 wasm-bindgen = "0.2.105"
